--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "bpk-component-autosuggest": "^4.0.35",
     "bpk-component-button": "^3.2.11",
     "bpk-component-code": "^2.0.32",
+    "bpk-component-drawer": "^2.0.34",
     "bpk-component-icon": "^5.0.33",
     "bpk-component-input": "^5.0.33",
     "bpk-component-label": "^4.0.32",
