--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -1,20 +1,27 @@
+beautifulsoup4==4.8.2
 certifi==2019.11.28
 chardet==3.0.4
 Click==7.0
+cycler==0.10.0
 decorator==4.4.1
 Flask==1.1.1
+Flask-Cors==3.0.8
 flask-redis==0.4.0
 idna==2.8
 itsdangerous==1.1.0
 Jinja2==2.11.1
+kiwisolver==1.1.0
 MarkupSafe==1.1.1
+matplotlib==3.1.3
 networkx==2.4
 numpy==1.18.1
 pandas==1.0.1
+pyparsing==2.4.6
 python-dateutil==2.8.1
 pytz==2019.3
 redis==3.4.1
 requests==2.22.0
 six==1.14.0
+soupsieve==1.9.5
 urllib3==1.25.8
 Werkzeug==1.0.0
