--- a/client/package.json
+++ b/client/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://pauarge.github.io/concert-genie",
   "name": "client",
   "version": "0.1.0",
   "private": true,
@@ -7,7 +8,9 @@
   },
   "scripts": {
     "start": "BROWSER=none react-scripts start",
-    "build": "react-scripts build"
+    "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "browserslist": [
     ">0.2%",
@@ -33,6 +36,7 @@
     "bpk-mixins": "^19.1.1",
     "bpk-stylesheets": "^5.0.1",
     "bpk-tokens": "^31.0.1",
+    "gh-pages": "^2.2.0",
     "react": "^16.4.2",
     "react-dom": "^16.4.2"
   }
