--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,7 @@
     "bpk-component-image": "^3.0.33",
     "bpk-component-input": "^5.0.33",
     "bpk-component-label": "^4.0.32",
+    "bpk-component-list": "^2.0.32",
     "bpk-component-panel": "^2.0.32",
     "bpk-component-section-list": "^2.0.33",
     "bpk-component-spinner": "^3.0.32",
