--- a/client/package.json
+++ b/client/package.json
@@ -1,12 +1,17 @@
 {
   "homepage": "http://pauarge.github.io/concert-genie",
-  "name": "client",
+  "name": "concert-genie-client",
+  "engines": {
+    "node": "12.16.1",
+    "npm": "6.13.4"
+  },
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "backpack-react-scripts": "7.0.5"
   },
   "scripts": {
+    "preinstall": "npx ensure-node-env",
     "start": "BROWSER=none react-scripts start",
     "build": "react-scripts build",
     "predeploy": "npm run build",
