--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -7,6 +7,7 @@ decorator==4.4.1
 Flask==1.1.1
 Flask-Cors==3.0.8
 flask-redis==0.4.0
+gunicorn==20.0.4
 idna==2.8
 itsdangerous==1.1.0
 Jinja2==2.11.1
