Cleaning up code

--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Backpack App",
-  "name": "Welcome to React + Backpack",
+  "short_name": "Concert Genie",
+  "name": "Concert Genie",
   "icons": [
     {
       "src": "favicon.ico",
